# gsy-e-sdk

./: Dockerfile  setup.py
energyMarket/: .gitignore  .gitmodules  MANIFEST.in  README.md  example.py  setup.cfg  setup.py  tutorial.ipynb
energyMarket/b4p/: .gitignore  __init__.py  accounts.py  consumingAsset.py  energyToken.py  market.py  producingAsset.py  registry.py
energyMarket/b4p/b4p-contracts/: .gitignore  README.md  brownie-config.yaml  requirements.txt
energyMarket/b4p/b4p-contracts/contracts/additional/: EnergyToken2.sol  EnergyTokenFactory.sol
energyMarket/b4p/b4p-contracts/contracts/market/: Asset.sol  ConsumingAsset.sol  ERC20Test.sol  EnergyToken.sol  Market.sol  MarketRegistry.sol  Node.sol  ProducingAsset.sol
energyMarket/b4p/b4p-contracts/contracts/mocks/: MockEursToken.sol
energyMarket/b4p/b4p-contracts/scripts/: deploy.py  helper.py  market.py
energyMarket/b4p/b4p-contracts/scripts/utils/: print_utils.py
energyMarket/b4p/b4p-contracts/tests/: market_test.py  token_test.py
gsy_e_sdk/: redis_aggregator.py  redis_bc_aggregator.py  redis_client_base.py
gsy_e_sdk/setups/asset_api_scripts/: api.py  redis_basic_strategies.py  redis_basic_strategies_BC.py  rest_basic_strategies.py
requirements/: base.txt
