[metadata]
name = b4p
version = 1.0.0
author = Pietro Piccini
author_email = pietro.piccini@hotmail.com
description =this package is used to handle the energyMarket smart contract
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BC4P/energyMarket.git
project_urls =
    Bug Tracker = https://github.com/BC4P/energyMarket/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = b4p
packages = find:
python_requires = >=3.10

[options.packages.find]
where = b4p